--- a/bysj/springboot/pom.xml
+++ b/bysj/springboot/pom.xml
@@ -113,6 +113,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+
+        <!-- 支付宝支付 SDK（老版） -->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.40.472.ALL</version>
+        </dependency>
     </dependencies>
 
     <build>
